Etape3: Intégrer la page d'accueil et ccréation champs formulaire de contact

--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,13 @@
 	width: 100%;
 	max-width: 1440px;
 	min-width: 320px;
-	/* padding: 0 50px; */
 	box-sizing: border-box;
 }
 
 body {
-	font-family: "DM Sans", sans-serif;
+	/* font-family: "DM Sans", sans-serif; */
 	margin: 0;
 	padding: 0;
-	/* height: 100%; */
 }
 
 header {
@@ -38,16 +36,23 @@ header {
 	/* height: 90px; */
 	height: 5.5rem;
 }
+/*
+a:focus,
+img:focus {
+	border: 2px solid #95fff9;
+}
+*/
+.home-link {
+	text-decoration: none;
+}
 
 h1 {
-	color: #901c1c;
+	color: var(--color-primary);
 	/* margin-right: 100px; */
 	margin-right: 6.25rem;
 }
 
 .logo {
-	/*height: 50px;
-	margin-left: 100px;*/
 	height: 3.13rem;
 	margin-left: 6.25rem;
 }
@@ -55,8 +60,6 @@ h1 {
 .photographer_section {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	/*gap: 70px;
-	margin-top: 100px;*/
 	gap: 4.375rem;
 	margin-top: 6.25rem;
 }
@@ -78,47 +81,50 @@ h1 {
 	text-align: center;
 	line-height: 0;
 }
+
+.photographer-link :hover,
+.photographer-link:focus {
+	font-weight: bold;
+}
+
 .photographer_section article h2 {
-	color: #d3573c;
+	color: var(--color-tertiary);
 	font-size: 2rem;
-	/* width: 500px; */
-	/* overflow-wrap: break-word; */
 	font-weight: 400;
 	line-height: 0;
 }
 
 .photographer_section article img {
-	/*height: 200px;
-	width: 200px;*/
 	height: 12.5rem;
 	width: 12.5rem;
-	background-color: lightgray;
 	border-radius: 50%;
 	object-fit: cover;
 	object-position: bottom center;
 	line-height: 0;
+	background-color: lightgray;
+	filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
+
+	/* background-size: -34.731px / 57.605% 112.699%; */
+	/* background-position: -34.731px / 57.605% 112.699%; */
 }
 
 .photographer-placeResidence {
-	color: #901c1c;
+	color: var(--color-primary);
 	text-align: center;
-	/* font-size: 13px; */
 	font-size: 0.82rem;
 	font-weight: 400;
 	line-height: 0;
 }
 .photographer-slogan {
-	color: #000;
+	color: var(--color-dark);
 	text-align: center;
-	/* font-size: 10px; */
 	font-size: 0.625rem;
 	font-weight: 400;
 	line-height: 0;
 }
 .photographer-rate {
-	color: #757575;
+	color: var(--color-dark-medium);
 	text-align: center;
-	/* font-size: 9px; */
 	font-size: 0.563rem;
 	font-weight: 400;
 	line-height: 0;
