--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,76 +1,121 @@
 #contact_modal {
-    display: none;
+	display: none;
+	/*position: fixed;
+	inset: 0;
+	z-index: 1;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 70rem;*/
 }
 
 .photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
+	background-color: var(--color-light-medium);
+	/*height: 300px;
+	margin: 0 100px;*/
+	height: 18.75rem;
+	margin: 0 6.25rem;
 }
 
 .contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
-    cursor: pointer;
+	/* font-size: 20px; */
+	font-size: 1.25rem;
+	font-weight: bold;
+	color: white;
+	/*padding: 11px;
+	width: 170px;
+	height: 70px;*/
+	padding: 0.69rem;
+	width: 10.625rem;
+	height: 4.38rem;
+	border: none;
+	/* background-color: #901c1c; */
+	background-color: var(--color-primary);
+	/* border-radius: 5px; */
+	border-radius: 0.313rem;
+	cursor: pointer;
 }
 
 .modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
+	/* border-radius: 5px; */
+	border-radius: 0.313rem;
+	background-color: #db8876;
+	width: 50%;
+	/* height: 50%; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	/* padding: 35px; */
+
+	padding: 3.5rem;
+	margin: auto;
+	/*width: 669px;*/
+	/* height: 500px; */
+	/* max-width: 500px; */
+	/* overflow: hidden; */
+	/* position: relative; */
+	/* padding-top: 10px;
+    	position: relative; */
+
+	/* height: 500px; */
 }
 
 .modal header {
-    justify-content: space-between;
-    width: 100%;
+	justify-content: space-between;
+	width: 100%;
 }
 
 .modal header img {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
+	/* font-size: 64px; */
+	font-size: 4rem;
+	font-weight: normal;
+	text-align: center;
 }
 
 form {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
 form label {
-    color: #312E2E;
-    font-size: 36px;
+	color: #312e2e;
+	/* font-size: 36px; */
+	font-size: 2.25rem;
 }
 
 form div {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: self-start;
+	/* margin-bottom: 26px; */
+	margin-bottom: 1.625rem;
 }
 
 form input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
+	width: 100%;
+	/* height: 68px; */
+	height: 4.25rem;
+	border: none;
+	/* border-radius: 5px; */
+	border-radius: 0.313rem;
+}
+
+.modal-close-btn {
+	width: 5rem;
+	height: 5rem;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
 }
