--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,3 +1,8 @@
+.main-photographer {
+	display: flex;
+	/* margin: 0 6rem; */
+}
+
 #contact_modal {
 	display: none;
 	/*position: fixed;
@@ -19,25 +24,98 @@
 	margin: 0 100px;*/
 	height: 18.75rem;
 	margin: 0 6.25rem;
+
+	display: flex;
+	justify-content: space-between;
+	/* margin: 0; */
+
+	padding: 0px;
+	/* margin: 0 auto; */
+	width: 100%;
+	border-radius: 5px;
+}
+
+.photographer-profile-infos {
+	display: flex;
+	flex-direction: column;
+	/*justify-content: space-around;
+	align-items: start;*/
+	/* margin: 0; */
+	margin-left: 2.33%;
+	margin-right: -9%;
+	padding: 20px;
+	order: 0;
+	/* width: 33.33%; */
+}
+
+.portrait-Container {
+	display: flex;
+	flex-direction: column;
+	align-items: end;
+	margin: 20px;
+	width: 200px;
+	height: 200px;
+	order: 2;
+	border-radius: 50%;
+	overflow: hidden;
+	margin: 51px 20px 30px 20px;
+}
+.photographer-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	scale: 1.3;
+	margin-top: 1%;
+	margin-right: 2%;
+}
+
+.photographer-name h1 {
+	color: var(--color-tertiary);
+	font-size: 2.3rem;
+	font-weight: 400;
+	line-height: 0;
+
+	width: 100%;
+	margin-top: 67px;
+}
+
+.photographer-city {
+	color: var(--color-primary);
+	font-size: 1.2rem;
+	font-weight: 400;
+	line-height: 0;
+	margin-top: 11px;
+}
+
+.photographer-tagline {
+	color: var(--color-dark);
+
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 0;
+	margin-top: 30px;
 }
 
 .contact_button {
-	/* font-size: 20px; */
 	font-size: 1.25rem;
 	font-weight: bold;
 	color: white;
-	/*padding: 11px;
-	width: 170px;
-	height: 70px;*/
+
 	padding: 0.69rem;
 	width: 10.625rem;
 	height: 4.38rem;
 	border: none;
-	/* background-color: #901c1c; */
 	background-color: var(--color-primary);
-	/* border-radius: 5px; */
 	border-radius: 0.313rem;
+
 	cursor: pointer;
+	display: flex;
+	order: 1;
+	margin: auto;
+
+	align-items: center;
+	justify-content: center;
 }
 
 .modal {
