--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,11 @@ h1 {
 
 .photographer_section article h2 {
 	color: var(--color-tertiary);
-	font-size: 2rem;
+	font-size: 1, 875rem;
+	/* font-size: 30px; */
 	font-weight: 400;
+	/*font-size: 2rem;
+	font-weight: 400;*/
 	line-height: 0;
 }
 
@@ -146,20 +149,26 @@ h1 {
 	color: var(--color-primary);
 	text-align: center;
 	font-size: 0.82rem;
-	font-weight: 600;
+	/*font-weight: 600;*/
+	/* font-size: 13px; */
+	font-weight: 400;
 	line-height: 0;
 }
 .photographer-slogan {
 	color: var(--color-dark);
 	text-align: center;
-	font-size: 0.7rem;
-	font-weight: 500;
+	font-size: 0.65rem;
+	/*font-weight: 500;*/
+	/* font-size: 10px; */
+	font-weight: 400;
 	line-height: 0;
 }
 .photographer-rate {
 	color: var(--color-dark-medium);
 	text-align: center;
 	font-size: 0.6rem;
-	font-weight: 500;
+	/*font-weight: 500;*/
+	font-size: 9px;
+	font-weight: 400;
 	line-height: 0;
 }
