--- a/css/photographer.css
+++ b/css/photographer.css
@@ -2,6 +2,21 @@
 	 display: flex; 
 	 margin: 0 6rem; 
 }*/
+/*
+.page-photographer {
+	margin: 0 auto;
+	padding: 30px 20px 20px;
+	max-width: 1400px;
+}*/
+
+main {
+	padding: 0 120px;
+}
+
+.logo {
+	height: 2.78rem;
+	margin-left: 7.5rem;
+}
 
 #contact_modal {
 	display: none;
@@ -20,19 +35,25 @@
 
 .photograph-header {
 	background-color: var(--color-light-medium);
-	/*height: 300px;
-	margin: 0 100px;*/
 	height: 18.75rem;
-	margin: 0 6.25rem;
+	/* margin: 0 6.25rem; */
 
 	display: flex;
+	/* flex-flow: row nowrap; */
+	align-items: center;
 	justify-content: space-between;
-	/* margin: 0; */
 
-	padding: 0px;
-	/* margin: 0 auto; */
+	/* padding: 0px; */
+
 	width: 100%;
 	border-radius: 5px;
+
+	padding: 40px;
+	margin-top: 40px;
+
+	/*	height: 30rem;
+	padding: 3em;
+	margin-bottom: 2em;*/
 }
 
 .photographer-profile-infos {
@@ -74,7 +95,7 @@
 	color: var(--color-tertiary);
 	font-size: 2.3rem;
 	font-weight: 400;
-	line-height: 0;
+	/* line-height: 0; */
 
 	width: 100%;
 	margin-top: 67px;
@@ -199,23 +220,25 @@ form input {
 }
 
 .medias {
-	display: flex;
+	/*	display: flex;
 	flex-direction: column;
 	gap: 40px;
-	margin-top: 50px;
+	margin-top: 50px;*/
 
-	/*width: 100%;
-	padding: 0px;*/
+	margin-top: 30px;
 }
 
 .gallery {
-	display: grid;
-	/* grid-template-columns: repeat(auto-fill, 35rem); */
-
+	/*display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	justify-content: space-between;
 	gap: 2em 1em;
-	padding: 2em 0;
+	padding: 2em 0;*/
+
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 30px 60px;
 }
 
 .gallery-card {
@@ -230,4 +253,8 @@ form input {
 	-o-object-fit: cover;
 	object-fit: cover;
 	border-radius: 0.5rem;
+}
+
+.wished {
+	color: var(--color-primary);
 }
