--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
-@import url("photographer.css");
-
-* {
+*,
+::before,
+::after {
 	font-family: "DM Sans", sans-serif;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
+
 :root {
 	--color-primary: #901c1c;
 	--color-secondary: #db8876;
@@ -14,161 +18,25 @@
 	--color-light-medium: #fafafa;
 	--color-label: #312e2e;
 }
-
-#main {
-	width: 100%;
-	max-width: 1440px;
-	min-width: 320px;
-	box-sizing: border-box;
-}
-
-body {
-	/* font-family: "DM Sans", sans-serif; */
-	/* margin: 0; */
-	padding: 0;
-
-	/* margin: 0; */
-	display: flex;
-	/* justify-content: center; */
-	/* align-items: center; */
-
-	flex-direction: column;
-	max-width: 90rem;
-	/* font-family: "DM Sans", sans-serif; */
+.page {
 	margin: 0 auto;
+	padding: 30px 20px 20px;
+	max-width: 1400px;
 }
 
-header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	/* height: 90px; */
-	height: 5.5rem;
+header a {
+	position: relative;
+	border-radius: 5px;
+	padding: 5px;
 }
-/*
-a:focus,
-img:focus {
-	border: 2px solid #95fff9;
-}
-*/
-.home-link {
+
+a {
 	text-decoration: none;
+	outline: none;
 }
 
-h1 {
-	color: var(--color-primary);
-	/* margin-right: 100px; */
-	margin-right: 6.25rem;
-}
-
-.logo {
-	height: 2.5rem;
-	margin-left: 6.25rem;
-	/*width: 200px;
-    height: 50px; */
-}
-
-.photographer_section {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	gap: 4.375rem;
-	margin-top: 6.25rem;
-}
-
-.photographer_section article {
-	justify-self: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.photographer-link {
-	display: flex;
-	flex-flow: column nowrap;
-	align-items: center;
-	justify-content: center;
-	text-decoration: none;
-	text-align: center;
-	line-height: 0;
-	cursor: pointer;
-}
-
-.photographer-link :hover,
-.photographer-link:focus {
-	font-weight: bold;
-}
-
-.photographer_section article h2 {
-	color: var(--color-tertiary);
-	font-size: 1, 875rem;
-	/* font-size: 30px; */
-	font-weight: 400;
-	/*font-size: 2rem;
-	font-weight: 400;*/
-	line-height: 0;
-}
-
-.photographer_section article .containerImg {
-	/* height: 200px; */
-	/* width: 200px; */
-	/* display: flex; */
-	/* margin: 0 auto; */
-	height: 12rem;
-	width: 12rem;
-	overflow: hidden;
-	margin-bottom: 1rem;
-	/* justify-content: center; */
-
-	border-radius: 50%;
-	/* object-fit: cover; */
-	/* cursor: pointer; */
-	/* scale: 1.5; */
-	/* object-position: bottom center; */
-	/* overflow-clip-margin: unset ; */
-
-	/* line-height: 0; */
-	background-color: lightgray;
-	/* filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15)); */
-
-	/* background-size: -34.731px / 57.605% 112.699%; */
-	/* background-position: -34.731px / 57.605% 112.699%; */
-}
-
-.containerImg img {
-	width: 100%;
-	height: 100%;
+img,
+video {
 	object-fit: cover;
 	object-position: center;
-	/* border-radius: 50%; */
-	scale: 1.2;
-}
-
-.photographer-placeResidence {
-	color: var(--color-primary);
-	text-align: center;
-	font-size: 0.82rem;
-	/*font-weight: 600;*/
-	/* font-size: 13px; */
-	font-weight: 400;
-	line-height: 0;
-}
-.photographer-slogan {
-	color: var(--color-dark);
-	text-align: center;
-	font-size: 0.65rem;
-	/*font-weight: 500;*/
-	/* font-size: 10px; */
-	font-weight: 400;
-	line-height: 0;
-}
-.photographer-rate {
-	color: var(--color-dark-medium);
-	text-align: center;
-	font-size: 0.6rem;
-	/*font-weight: 500;*/
-	font-size: 9px;
-	font-weight: 400;
-	line-height: 0;
 }
