--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 *,
 ::before,
 ::after {
-	font-family: "DM Sans", sans-serif;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -24,6 +23,9 @@
 	max-width: 1400px;
 }
 
+body {
+	font-family: "DM Sans", sans-serif;
+}
 header a {
 	position: relative;
 	border-radius: 5px;
