css footer de la page  et compression video-images

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,14 +1,3 @@
-/*.main-photographer {
-	 display: flex; 
-	 margin: 0 6rem; 
-}*/
-/*
-.page-photographer {
-	margin: 0 auto;
-	padding: 30px 20px 20px;
-	max-width: 1400px;
-}*/
-
 main {
 	padding: 0 120px;
 }
@@ -18,55 +7,40 @@ main {
 	margin-left: 7.5rem;
 }
 
-#contact_modal {
-	display: none;
-	/*position: fixed;
-	inset: 0;
-	z-index: 1;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	width: 70rem;*/
+button {
+	background-color: transparent;
 }
+button,
+a {
+	cursor: pointer;
+	outline: none;
+	border: none;
+}
+
+/*****HEADER*****/
 
 .photograph-header {
 	background-color: var(--color-light-medium);
 	height: 18.75rem;
 	/* margin: 0 6.25rem; */
-
 	display: flex;
 	/* flex-flow: row nowrap; */
 	align-items: center;
 	justify-content: space-between;
-
-	/* padding: 0px; */
-
 	width: 100%;
 	border-radius: 5px;
-
 	padding: 40px;
 	margin-top: 40px;
-
-	/*	height: 30rem;
-	padding: 3em;
-	margin-bottom: 2em;*/
 }
 
 .photographer-profile-infos {
 	display: flex;
 	flex-direction: column;
-	/*justify-content: space-around;
-	align-items: start;*/
-	/* margin: 0; */
-	margin-left: 2.33%;
+
+	/*margin-left: 2.33%;
 	margin-right: -9%;
-	padding: 20px;
+	padding: 20px; */
 	order: 0;
-	/* width: 33.33%; */
 }
 
 .portrait-Container {
@@ -98,65 +72,57 @@ main {
 	/* line-height: 0; */
 
 	width: 100%;
-	margin-top: 67px;
+	/* margin-top: 67px; */
 }
 
 .photographer-city {
 	color: var(--color-primary);
 	font-size: 1.2rem;
 	font-weight: 400;
-	line-height: 0;
-	margin-top: 11px;
+	/* line-height: 0; */
+	margin-top: 10px;
 }
 
 .photographer-tagline {
 	color: var(--color-dark);
-
 	font-size: 1rem;
 	font-weight: 400;
-	line-height: 0;
-	margin-top: 30px;
+	margin-top: 20px;
 }
-
-button {
-	background-color: transparent;
-}
-button,
-a {
-	cursor: pointer;
-	outline: none;
-	border: none;
-}
-/*
-.btn {
-	font-size: clamp(1.8rem, 2vw, 2rem);
-	font-weight: bold;
-	color: var(--color-light);
-	padding: 15px;
-	height: 50px;
-	background-color: var(--color-primary);
-	border-radius: 5px;
-}*/
 
 .contact_button {
 	font-size: 1.25rem;
 	font-weight: bold;
-	color: white;
 
+	color: var(--color-light);
 	padding: 0.69rem;
 	width: 10.625rem;
 	height: 4.38rem;
 	border: none;
 	background-color: var(--color-primary);
 	border-radius: 0.313rem;
-
 	cursor: pointer;
 	display: flex;
 	order: 1;
 	margin: auto;
-
 	align-items: center;
 	justify-content: center;
+}
+
+/****** CONTACT MODAL ********/
+#contact_modal {
+	display: none;
+	/*position: fixed;
+	inset: 0;
+	z-index: 1;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 70rem;*/
 }
 
 .modal {
@@ -239,6 +205,7 @@ form input {
 	cursor: pointer;
 }
 
+/****MEDIAS********/
 .medias {
 	/*	display: flex;
 	flex-direction: column;
@@ -298,9 +265,9 @@ form input {
 }
 
 .gallery-card figcaption h2 {
-	font-weight: 100;
+	font-weight: 400;
 	color: var(--color-primary);
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 }
 
 .gallery-card figcaption div {
@@ -323,43 +290,25 @@ form input {
 	outline: 2px solid var(--color-secondary);
 }
 
-.wished {
+.btn-like.wished {
 	color: var(--color-primary);
 }
 
-.container-likes-price {
+aside {
 	z-index: 1;
 	position: fixed;
 	bottom: 0;
 	right: 10%;
 	display: flex;
-	flex-flow: row nowrap;
+	align-items: center;
 	justify-content: space-between;
-	align-items: center;
-	/*width: 35rem;
-	height: 10rem;*/
-	padding: 1em;
-	background: #db8876;
-	color: #000000;
-	border-radius: 0.5rem;
-	font-weight: 500;
-	font-size: 2rem;
-	width: 400px;
-	height: 89px;
 	gap: 20px;
-}
-
-aside {
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
-}
-
-.photographer_likes_count {
-	text-align: right;
-
-	font-size: 24px;
-
-	font-weight: 500;
-	margin-right: 0.5em;
+	width: 375px;
+	height: 89px;
+	padding: 30px;
+	margin-top: 20px;
+	border-radius: 5px;
+	font-weight: bold;
+	font-size: 1.5rem;
+	background-color: var(--color-secondary);
 }
