--- a/css/home.css
+++ b/css/home.css
@@ -28,12 +28,11 @@ header {
 	padding: 0 120px;
 }
 
-/*
 a:focus,
 img:focus {
-	border: 2px solid #95fff9;
+	border: 2px solid var(--color-tertiary);
 }
-*/
+
 .home-link {
 	text-decoration: none;
 }
