validation champs formulaire et modale accessible

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -90,7 +90,7 @@ a {
 	margin-top: 20px;
 }
 
-.contact_button {
+.contact-button {
 	font-size: 1.25rem;
 	font-weight: bold;
 
@@ -107,52 +107,74 @@ a {
 	margin: auto;
 	align-items: center;
 	justify-content: center;
+
+	/*font-size: clamp(1.8rem, 2vw, 2rem);
+	font-weight: bold;
+	color: var(--color-light);
+	padding: 15px;
+	height: 50px;
+	background-color: var(--color-primary);
+	border-radius: 5px;*/
+}
+
+.btn-open:hover,
+.btn-open:focus {
+	background-color: var(--color-secondary);
+	color: var(--color-black);
 }
 
 /****** CONTACT MODAL ********/
-#contact_modal {
-	display: none;
-	/*position: fixed;
-	inset: 0;
+/*.no-scroll {
+	overflow: hidden;
+}
+*/
+.wrapper {
 	z-index: 1;
-
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	width: 70rem;*/
+	position: fixed;
+	background-color: rgba(33, 32, 32, 0.7);
+	inset: 0;
 }
+/*
+.contact-modal {
+	z-index: 1;
+	position: fixed;
+	left: 50%;
+	top: 57%;
+	transform: translate(-50%, -50%);
+	display: none;
+	flex-direction: column;
+	border-radius: 0.5rem;
+	background-color: #db8876;
+	width: 40rem;
+	padding: 2rem;
+}*/
 
 .modal {
-	/* border-radius: 5px; */
-	border-radius: 0.313rem;
-	background-color: #db8876;
-	width: 50%;
-	/* height: 50%; */
+	position: absolute;
+	left: 30%;
+	top: 13%;
+	/*transform: translate(-50%, -50%);*/
+	border-radius: 0.5rem;
+	background-color: var(--color-secondary);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+
 	justify-content: space-between;
-	/* padding: 35px; */
-
-	padding: 3.5rem;
-	margin: auto;
-	/*width: 669px;*/
-	/* height: 500px; */
-	/* max-width: 500px; */
-	/* overflow: hidden; */
-	/* position: relative; */
-	/* padding-top: 10px;
-    	position: relative; */
-
-	/* height: 500px; */
+	width: 40rem;
+	padding: 2rem;
+	/* opacity: 0; */
+	transform: translateY(-150px);
+	animation: fadeIn 0.3s ease-in-out forwards;
 }
 
 .modal header {
+	display: flex;
 	justify-content: space-between;
 	width: 100%;
+	font-size: 1rem;
 }
 
 .modal header img {
@@ -160,41 +182,192 @@ a {
 }
 
 .modal header h2 {
-	/* font-size: 64px; */
-	font-size: 4rem;
-	font-weight: normal;
+	font-size: 3em;
+	font-weight: 400;
 	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-items: center;
 }
 
-form {
+.modal-name-photographer {
+	font-size: 1em;
+	font-weight: normal;
+	text-align: left;
+	margin-bottom: 10px;
+}
+
+.moadal form {
 	display: flex;
 	width: 100%;
 	flex-direction: column;
-	align-items: flex-start;
+	gap: 10;
+	/* align-items: flex-start; */
 }
 
-form label {
+.formData {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
+.formData label {
 	color: #312e2e;
-	/* font-size: 36px; */
-	font-size: 2.25rem;
+	font-size: 2em;
+}
+/*
+form input {
+	width: 100%;
+
+	height: 4.25rem;
+	border: none;
+
+	border-radius: 0.313rem;
+}*/
+
+.formData input {
+	height: 50px;
+	padding-left: 10px;
+	border: none;
+	border-radius: 5px;
 }
 
+.formData textarea {
+	border-radius: 5px;
+	height: 150px;
+	resize: none;
+	padding: 10px;
+}
+
+.errormessage {
+	display: none;
+	color: red;
+	font-weight: bold;
+}
+/*
+.d-none {
+	display: block;
+}*/
+
+.formData input[aria-invalid="false"],
+.formData textarea[aria-invalid="false"] {
+	border: 3px solid green;
+}
+
+.formData input[aria-invalid="true"],
+.formData textarea[aria-invalid="true"] {
+	border: 3px solid red;
+}
+
+/*
+.formData span {
+	color: var(--color-dark);
+	font-size: clamp(1.2rem, 1.6vw, 1.6rem);
+}
+
+.formData input:invalid:focus,
+.formData textarea:invalid:focus {
+	outline: 2px solid var(--color-primary);
+}
+
+.invalid {
+	outline: 2px solid var(--color-primary);
+}
+
+.valid {
+	outline: 2px solid green;
+}
+*/
+.btn-submit {
+	max-width: 150px;
+	font-size: 2em;
+	font-weight: bold;
+	color: var(--color-light);
+	background-color: var(--color-primary);
+	border-radius: 5px;
+	padding: 0.69rem;
+	width: 10.625rem;
+	height: 4.38rem;
+	margin-top: 0.5rem;
+}
+
+.btn-submit:hover,
+.btn-submit:focus {
+	outline: 2px solid var(--color-light);
+}
+/*
 form div {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	align-items: self-start;
-	/* margin-bottom: 26px; */
+
 	margin-bottom: 1.625rem;
 }
-
-form input {
-	width: 100%;
-	/* height: 68px; */
-	height: 4.25rem;
+*/
+.modal-close-btn {
+	width: 5rem;
+	height: 5rem;
 	border: none;
-	/* border-radius: 5px; */
-	border-radius: 0.313rem;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+@keyframes fadeIn {
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+/**************************************/
+/*
+.contact-modal {
+	z-index: 10;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+	position: relative;
+	border-radius: 5px;
+	background-color: var(--color-secondary);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	gap: 10px;
+	padding: 20px;
+	width: 90%;
+	max-width: 600px;
+	opacity: 0;
+	transform: translateY(-150px);
+	animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+.modal header {
+	width: 100%;
+	font-size: 2rem;
+}
+
+.modal header img {
+	cursor: pointer;
+}
+
+.modal header h2 {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-weight: normal;
+	font-size: 2rem;
 }
 
 .modal-close-btn {
@@ -205,6 +378,73 @@ form input {
 	cursor: pointer;
 }
 
+.modal-close-btn:hover::before {
+	color: var(--color-primary);
+}
+.modal-close-btn:focus:not(:hover)::before {
+	outline: 2px solid var(--color-primary);
+}
+.modal-close-btn::before {
+	content: "\f00d";
+	font-family: "Font Awesome 5 Free";
+	padding: 5px;
+	border-radius: 5px;
+	font-weight: 900;
+	color: var(--color-light);
+	font-size: clamp(2rem, 3vw, 3rem);
+}
+
+.modal form {
+	display: flex;
+	width: 100%;
+	gap: 10px;
+	flex-direction: column;
+}
+
+.formData {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
+.formData label {
+	color: #312e2e;
+
+	font-size: 2.25rem;
+}
+
+.formData input {
+	height: 50px;
+	padding-left: 10px;
+	border: none;
+	border-radius: 5px;
+}
+
+.formData textarea {
+	border-radius: 5px;
+	height: 150px;
+	resize: none;
+	padding: 10px;
+}
+
+.formData span {
+	color: var(--color-dark);
+	font-size: clamp(1.2rem, 1.6vw, 1.6rem);
+}
+.formData input:invalid:focus,
+.formData textarea:invalid:focus {
+	outline: 2px solid var(--color-primary);
+}
+
+.btn-submit {
+	max-width: 150px;
+}
+
+.btn-submit:hover,
+.btn-submit:focus {
+	outline: 2px solid var(--color-light);
+}*/
+
 /****MEDIAS********/
 .medias {
 	/*	display: flex;
@@ -213,11 +453,12 @@ form input {
 	margin-top: 50px;*/
 
 	margin-top: 30px;
+	margin-bottom: 60px;
 }
 
 .gallery {
 	/*display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: repeat(auto-fill, 35rem);
 	justify-content: space-between;
 	gap: 2em 1em;
 	padding: 2em 0;*/
@@ -225,8 +466,7 @@ form input {
 	position: relative;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	/* grid-template-columns: 1fr 1fr 1fr; */
-	/* grid-template-columns: repeat(auto-fill, 35rem); */
+
 	gap: 30px 60px;
 }
 
@@ -242,19 +482,19 @@ form input {
 	border-radius: 5px;
 	overflow: hidden;
 }
-
+/*
 .gallery-card a figure {
 	height: 260px;
 	transition: all 0.2s ease-in-out;
-}
+}*/
+
 .gallery-media {
 	/*width: 22rem;
 	height: 22rem;*/
 	/* object-fit: cover; */
 	border-radius: 0.5rem;
-	height: 100%;
-	width: 100%;
-	will-change: transform;
+	height: 300px;
+	width: 350px;
 }
 
 .gallery-card figcaption {
@@ -311,4 +551,17 @@ aside {
 	font-weight: bold;
 	font-size: 1.5rem;
 	background-color: var(--color-secondary);
+}
+
+/*****LIGHTBOX*****/
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
 }
