--- a/css/photographer.css
+++ b/css/photographer.css
@@ -428,20 +428,13 @@ aside {
 		transform: translateY(0);
 	}
 }
+
 /*  TRI */
 
 .form-wrapper {
-	/*display: flex;
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	align-items: baseline;
-	justify-content: space-between;*/
 	margin: 2rem 0;
 }
-/*
-#sorter-select {
-	
+.sort-menu {
 	width: 10.625rem;
 	height: 4.38rem;
 
@@ -451,104 +444,13 @@ aside {
 	font-weight: 700;
 	border-radius: 0.5rem;
 	border: 1rem solid #901c1c;
-	outline: none;
+	/* outline: none; */
 	cursor: pointer;
-}*/
+	/* padding: 20px; */
+}
 
 .Title-select {
 	font-size: 1.1rem;
 	font-weight: 700;
 	margin-right: 1rem;
-}
-
-.dropdown_content {
-	max-height: 0;
-	background-color: var(--color-primary);
-	transition: max-height 0.1s ease-in-out;
-}
-
-.dropdown_content li {
-	position: relative;
-	width: 150px;
-}
-
-.dropdown_content li::before {
-	content: "";
-	position: absolute;
-	top: 0px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 85%;
-	height: 1px;
-	background-color: var(--color-light);
-}
-
-.dropdown_content li option {
-	height: 50px;
-	padding: 15px;
-	font-size: clamp(1.8rem, 2vw, 2rem);
-	color: var(--color-light);
-}
-/*
-.btn_drop {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 150px;
-    background-color: var(--color-primary);
-}
-*/
-.dropdown_content li option {
-	width: 100%;
-	text-align: left;
-}
-/*
-.dropdown_content li button:hover,
-.dropdown_content li button:focus,
-.btn_drop:hover,
-.btn_drop:focus{
-    background-color: var(--color-secondary);
-    color: var(--color-black);
-}
-*/
-.curtain_effect {
-	max-height: 200px;
-}
-
-/*.option-select {
-	width: 10.625rem;
-	height: 5rem;
-	margin: 20px;
-	background-color: #901c1c;
-	border-bottom: 1px solid #fafafa;
-}*/
-/*
-#sorter-select::before {
-	content: "___";
-	position: absolute;
-	top: 0px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 10.625rem;
-	height: 5rem;
-	margin: 20px;
-	background-color: #901c1c;
-	border-bottom: 2px solid black;
-	min-height: 3rem;
-}
-*/
-
-*::selection {
-	background: #0db397;
-	color: grey;
-}
-
-*::-moz-selection {
-	background: #00cc7e;
-	color: grey;
-}
-
-*::-webkit-selection {
-	background: #00cc0a;
-	color: #292626;
 }
