--- a/css/home.css
+++ b/css/home.css
@@ -17,8 +17,9 @@ header {
 	padding: 0 120px;
 }
 
-.home-link {
+a {
 	text-decoration: none;
+	outline: none;
 }
 
 h1 {
@@ -29,6 +30,7 @@ h1 {
 .logo {
 	height: 2.5rem;
 }
+
 
 .photographer_section {
 	display: flex;
@@ -64,7 +66,7 @@ h1 {
 
 .photographer_section article h2 {
 	color: var(--color-tertiary);
-	font-size: 1, 875rem;
+	font-size: 1, 875em;
 	font-weight: 400;
 }
 
@@ -88,20 +90,19 @@ h1 {
 .photographer-placeResidence {
 	color: var(--color-primary);
 	text-align: center;
-	font-size: 0.82rem;
+	font-size: 0.83em;
 	font-weight: 400;
 }
 .photographer-slogan {
 	color: var(--color-dark);
 	text-align: center;
-	font-size: 0.65rem;
+	font-size: 0.67em;
 	font-weight: 400;
 }
 
 .photographer-rate {
 	color: var(--color-dark-medium);
 	text-align: center;
-	font-size: 0.6rem;
-	font-size: 9px;
+	font-size: 0.63rem;
 	font-weight: 400;
 }
