--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,9 +1,10 @@
 main {
-	padding: 0 120px;
+	/* padding: 0 120px; */
+	padding: 0 7.5rem;
 }
 
 .logo {
-	height: 2.78rem;
+	height: 2.5rem;
 	margin-left: 7.5rem;
 }
 
@@ -20,6 +21,10 @@ a {
 
 /*****HEADER*****/
 
+h1:focus {
+	outline: 2px solid var(--color-tertiary);
+}
+
 .photograph-header {
 	background-color: var(--color-light-medium);
 	height: 18.75rem;
@@ -28,8 +33,8 @@ a {
 	justify-content: space-between;
 	width: 100%;
 	border-radius: 5px;
-	padding: 40px;
-	margin-top: 40px;
+	padding: 2.5rem;
+	margin-top: 2.5rem;
 }
 
 .photographer-profile-infos {
@@ -42,9 +47,11 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: end;
-	margin: 20px;
-	width: 200px;
-	height: 200px;
+	/* margin: 20px; */
+	/*width: 200px;
+	height: 200px;*/
+	width: 12.5rem;
+	height: 12.5rem;
 	order: 2;
 	border-radius: 50%;
 	overflow: hidden;
@@ -62,23 +69,27 @@ a {
 
 .photographer-name h1 {
 	color: var(--color-tertiary);
-	font-size: 2.3rem;
+	/* font-size: 2.3rem; */
+	font-size: 2.3em;
 	font-weight: 400;
 	width: 100%;
 }
 
 .photographer-city {
 	color: var(--color-primary);
-	font-size: 1.2rem;
+	/* font-size: 1.2rem; */
+	font-size: 1.2em;
 	font-weight: 400;
 	margin-top: 10px;
 }
 
 .photographer-tagline {
 	color: var(--color-dark);
-	font-size: 1rem;
+	/* font-size: 1rem; */
+	font-size: 1em;
 	font-weight: 400;
-	margin-top: 20px;
+	/* margin-top: 20px; */
+	margin-top: 1.25rem;
 }
 
 .contact-button {
@@ -121,7 +132,7 @@ a {
 	position: absolute;
 	left: 30%;
 	top: 13%;
-	/*transform: translate(-50%, -50%);*/
+	transform: translate(-50%, -50%);
 	border-radius: 0.5rem;
 	background-color: var(--color-secondary);
 	display: flex;
@@ -129,7 +140,7 @@ a {
 	justify-content: space-between;
 	width: 40rem;
 	padding: 2rem;
-	transform: translateY(-150px);
+	/* transform: translateY(-150px); */
 	animation: fadeIn 0.3s ease-in-out forwards;
 }
 
@@ -137,7 +148,7 @@ a {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	font-size: 1rem;
+	font-size: 1em;
 }
 
 .modal header img {
@@ -158,14 +169,15 @@ a {
 	font-size: 1em;
 	font-weight: normal;
 	text-align: left;
-	margin-bottom: 10px;
+	/* margin-bottom: 10px; */
+	margin-bottom: 0.625rem;
 }
 
-.moadal form {
+.modal form {
 	display: flex;
 	width: 100%;
 	flex-direction: column;
-	gap: 10;
+	/* gap: 10; */
 }
 
 .formData {
@@ -180,8 +192,9 @@ a {
 }
 
 .formData input {
-	height: 50px;
-	padding-left: 10px;
+	/* height: 50px; */
+	height: 3.125rem;
+	padding-left: 0.625rem;
 	border: none;
 	border-radius: 5px;
 }
@@ -238,8 +251,10 @@ a {
 /****MEDIAS********/
 
 .medias {
-	margin-top: 30px;
-	margin-bottom: 60px;
+	/*margin-top: 30px;
+	margin-bottom: 90px;*/
+	margin-top: 1.875rem;
+	margin-bottom: 5.625rem;
 }
 
 .gallery {
@@ -262,6 +277,7 @@ a {
 .gallery-media {
 	border-radius: 0.5rem;
 	height: 380px;
+	/* height: 23.75rem; */
 	width: 100%;
 }
 
@@ -275,7 +291,8 @@ a {
 .gallery-card figcaption h2 {
 	font-weight: 400;
 	color: var(--color-primary);
-	font-size: 1.5rem;
+	/* font-size: 1.5rem; */
+	font-size: 1.5em;
 }
 
 .gallery-card figcaption div {
@@ -284,13 +301,15 @@ a {
 	align-items: center;
 	gap: 5px;
 	color: var(--color-primary);
-	font-size: 1.3rem;
+	/* font-size: 1.3rem; */
+	font-size: 1.3em;
 }
 
 .btn-like {
 	border-radius: 5px;
 	padding: 0 1px;
-	font-size: 1.3rem;
+	/* font-size: 1.3rem; */
+	font-size: 1.3em;
 	color: var(--color-secondary);
 }
 
@@ -311,13 +330,18 @@ aside {
 	align-items: center;
 	justify-content: space-between;
 	gap: 20px;
-	width: 375px;
+	/*width: 375px;
 	height: 89px;
 	padding: 30px;
-	margin-top: 20px;
+	margin-top: 20px;*/
+	width: 23.44rem;
+	height: 5.55rem;
+	padding: 1.88rem;
+	margin-top: 1.25rem;
 	border-radius: 5px;
 	font-weight: bold;
-	font-size: 1.5rem;
+	/* font-size: 1.5rem; */
+	font-size: 1.5em;
 	background-color: var(--color-secondary);
 }
 
@@ -379,8 +403,10 @@ aside {
 	padding: 5px;
 }
 
-.controls-left .fa-solid {
-	font-size: 60px;
+.controls-left .fa-solid,
+.controls-right .fa-solid {
+	/* font-size: 60px; */
+	font-size: 3.75em;
 }
 
 .controls-right {
@@ -395,23 +421,30 @@ aside {
 	color: var(--color-primary);
 }
 
-.controls-right .fa-solid {
-	font-size: 60px;
+.controls-left .fa-solid:focus-visible:not(:hover),
+.controls-right .fa-solid:focus-visible:not(:hover) {
+	outline: 2px solid var(--color-primary);
 }
 
-.lightbox-media {
+.controls-left .fa-solid:hover::before,
+.controls-right .fa-solid:hover::before {
+	color: var(--color-secondary);
+}
+
+.media-lightbox {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
 }
-
 .media-lightbox img,
 .media-lightbox video {
 	padding-right: 20px;
 	padding-left: 20px;
 	width: 100%;
-	height: 100%;
+	/* height: 100%; */
+	/* height: 500px; */
+	height: 60%;
 	border-radius: 5px;
 }
 
@@ -437,20 +470,17 @@ aside {
 .sort-menu {
 	width: 10.625rem;
 	height: 4.38rem;
-
 	background-color: #901c1c;
 	color: #ffffff;
 	font-size: 1.1rem;
 	font-weight: 700;
 	border-radius: 0.5rem;
 	border: 1rem solid #901c1c;
-	/* outline: none; */
 	cursor: pointer;
-	/* padding: 20px; */
 }
 
 .Title-select {
-	font-size: 1.1rem;
+	font-size: 1.1em;
 	font-weight: 700;
 	margin-right: 1rem;
 }
