--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,6 @@ h1 {
 	height: 2.5rem;
 }
 
-
 .photographer_section {
 	display: flex;
 	justify-content: center;
@@ -66,7 +65,7 @@ h1 {
 
 .photographer_section article h2 {
 	color: var(--color-tertiary);
-	font-size: 1, 875em;
+	font-size: 1.875em;
 	font-weight: 400;
 }
 
@@ -84,7 +83,7 @@ h1 {
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
-	scale: 1.2;
+	transform: scale(1.2);
 }
 
 .photographer-placeResidence {
