--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,4 @@
 main {
-	/* padding: 0 120px; */
 	padding: 0 7.5rem;
 }
 
@@ -20,10 +19,6 @@ a {
 }
 
 /*****HEADER*****/
-
-h1:focus {
-	outline: 2px solid var(--color-tertiary);
-}
 
 .photograph-header {
 	background-color: var(--color-light-medium);
@@ -47,9 +42,6 @@ h1:focus {
 	display: flex;
 	flex-direction: column;
 	align-items: end;
-	/* margin: 20px; */
-	/*width: 200px;
-	height: 200px;*/
 	width: 12.5rem;
 	height: 12.5rem;
 	order: 2;
@@ -62,14 +54,13 @@ h1:focus {
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
-	scale: 1.3;
+	transform: scale(1.3);
 	margin-top: 1%;
 	margin-right: 2%;
 }
 
 .photographer-name h1 {
 	color: var(--color-tertiary);
-	/* font-size: 2.3rem; */
 	font-size: 2.3em;
 	font-weight: 400;
 	width: 100%;
@@ -77,7 +68,6 @@ h1:focus {
 
 .photographer-city {
 	color: var(--color-primary);
-	/* font-size: 1.2rem; */
 	font-size: 1.2em;
 	font-weight: 400;
 	margin-top: 10px;
@@ -85,10 +75,8 @@ h1:focus {
 
 .photographer-tagline {
 	color: var(--color-dark);
-	/* font-size: 1rem; */
 	font-size: 1em;
 	font-weight: 400;
-	/* margin-top: 20px; */
 	margin-top: 1.25rem;
 }
 
@@ -117,14 +105,22 @@ h1:focus {
 }
 
 /****** CONTACT MODAL ********/
+.modal-display {
+	position: fixed;
+	top: 0%;
+	left: 0%;
+	z-index: 500;
+	width: 100%;
+	height: 100%;
+}
 
 .wrapper {
-	z-index: 1;
+	z-index: 1000;
 	display: none;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
-	background-color: rgba(33, 32, 32, 0.7);
+	background: rgba(196, 196, 196, 0.4);
 	inset: 0;
 }
 
@@ -140,7 +136,6 @@ h1:focus {
 	justify-content: space-between;
 	width: 40rem;
 	padding: 2rem;
-	/* transform: translateY(-150px); */
 	animation: fadeIn 0.3s ease-in-out forwards;
 }
 
@@ -169,7 +164,6 @@ h1:focus {
 	font-size: 1em;
 	font-weight: normal;
 	text-align: left;
-	/* margin-bottom: 10px; */
 	margin-bottom: 0.625rem;
 }
 
@@ -177,7 +171,6 @@ h1:focus {
 	display: flex;
 	width: 100%;
 	flex-direction: column;
-	/* gap: 10; */
 }
 
 .formData {
@@ -192,7 +185,6 @@ h1:focus {
 }
 
 .formData input {
-	/* height: 50px; */
 	height: 3.125rem;
 	padding-left: 0.625rem;
 	border: none;
@@ -248,11 +240,12 @@ h1:focus {
 	cursor: pointer;
 }
 
+.modal-close-btn:focus {
+	outline: 2px solid var(--color-primary);
+}
 /****MEDIAS********/
 
 .medias {
-	/*margin-top: 30px;
-	margin-bottom: 90px;*/
 	margin-top: 1.875rem;
 	margin-bottom: 5.625rem;
 }
@@ -277,7 +270,6 @@ h1:focus {
 .gallery-media {
 	border-radius: 0.5rem;
 	height: 380px;
-	/* height: 23.75rem; */
 	width: 100%;
 }
 
@@ -291,7 +283,6 @@ h1:focus {
 .gallery-card figcaption h2 {
 	font-weight: 400;
 	color: var(--color-primary);
-	/* font-size: 1.5rem; */
 	font-size: 1.5em;
 }
 
@@ -301,14 +292,12 @@ h1:focus {
 	align-items: center;
 	gap: 5px;
 	color: var(--color-primary);
-	/* font-size: 1.3rem; */
 	font-size: 1.3em;
 }
 
 .btn-like {
 	border-radius: 5px;
 	padding: 0 1px;
-	/* font-size: 1.3rem; */
 	font-size: 1.3em;
 	color: var(--color-secondary);
 }
@@ -330,17 +319,12 @@ aside {
 	align-items: center;
 	justify-content: space-between;
 	gap: 20px;
-	/*width: 375px;
-	height: 89px;
-	padding: 30px;
-	margin-top: 20px;*/
 	width: 23.44rem;
 	height: 5.55rem;
 	padding: 1.88rem;
 	margin-top: 1.25rem;
 	border-radius: 5px;
 	font-weight: bold;
-	/* font-size: 1.5rem; */
 	font-size: 1.5em;
 	background-color: var(--color-secondary);
 }
@@ -380,7 +364,8 @@ aside {
 	border: none;
 }
 
-.btn-close-lightbox:hover {
+.btn-close-lightbox:hover,
+.btn-close-lightbox:focus {
 	transform: scale(1.2);
 }
 
@@ -405,7 +390,6 @@ aside {
 
 .controls-left .fa-solid,
 .controls-right .fa-solid {
-	/* font-size: 60px; */
 	font-size: 3.75em;
 }
 
@@ -421,14 +405,9 @@ aside {
 	color: var(--color-primary);
 }
 
-.controls-left .fa-solid:focus-visible:not(:hover),
-.controls-right .fa-solid:focus-visible:not(:hover) {
-	outline: 2px solid var(--color-primary);
-}
-
-.controls-left .fa-solid:hover::before,
-.controls-right .fa-solid:hover::before {
-	color: var(--color-secondary);
+.controls-left:focus-visible:not(:hover),
+.controls-right:focus-visible:not(:hover) {
+	outline: 1px solid var(--color-primary);
 }
 
 .media-lightbox {
@@ -442,10 +421,13 @@ aside {
 	padding-right: 20px;
 	padding-left: 20px;
 	width: 100%;
-	/* height: 100%; */
-	/* height: 500px; */
 	height: 60%;
 	border-radius: 5px;
+}
+
+.media-lightbox video:focus,
+.media-lightbox img:focus {
+	outline: 2px solid var(--color-primary);
 }
 
 .media-lightbox figcaption {
