--- a/css/photographer.css
+++ b/css/photographer.css
@@ -126,7 +126,7 @@ a {
 
 .modal {
 	position: absolute;
-	left: 30%;
+	right: 30%;
 	top: 13%;
 	transform: translate(-50%, -50%);
 	border-radius: 0.5rem;
